--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-
+    <script src="./js/vue.js"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/json2.js"></script>
 </head>
 
 <body>
     <%- body %>
-        <%- scripts %>
 </body>
+<%- scripts %>
 
 </html>
