--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 <div id="app">
     <h3>
-        Welcome to AppCoin - may the force be with coins
+        Welcome to AppCoins - may the force be with coins
     </h3>
     <span v-html="currentDateTime"></span>
     <hr>
