--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
             <td>
                 <span v-text="bitoexSellPriceUSD"></span>
             </td>
-            <td>
+            <td style="font-weight:bold;">
                 <span v-text="bitoexSellPriceFee"></span>
             </td>
         </tr>
