--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 </style>
 
 <div id="app">
-    <h3>
+    <h3 style="display: inline-block; margin: 5px 5px 5px 0px;">
         Welcome to AppCoins - may the force be with coins
     </h3>
     <span v-html="currentDateTime"></span>
